BUG: 301203

Interpret empty custom-delimited columns as NaN.

NOTE: this is different than non-numeric columns, which are interpreted
by atof() as zero.  I think NaN is the 'correct' interpretation, but
this would slow the interpretation of all ascii files.


git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1300414 283d02a7-25f6-0310-bc7c-ecb5cbfe19da